# Manikin_Software_Libraries_V2

./: .gitignore  CMakeLists.txt  README.md
fram_driver/inc/: MB85RS2MTA.h  S25FL064L.h
fram_driver/src/: MB85RS2MTA.c  S25FL064L.c
i2c_wrapper/src/: i2c_helper.cpp  i2c_helper.hpp  i2c_helper_platform_specific.hpp  i2c_helper_universal_hal.cpp
i2c_wrapper/test/: CMakeLists.txt  i2c_wrapper_mock_test.cc
i2c_wrapper/test/mocks/: i2c_helper.hpp  i2c_peripheral_mock.hpp
sensor_drivers/: .gitignore  CMakeLists.txt
sensor_drivers/sensor_base/src/: sensor_base.hpp  sensor_helper.hpp
sensor_drivers/sensor_compression/src/: sensor_compression.cpp  sensor_compression.hpp  vl6180x_registers.hpp
sensor_drivers/sensor_compression/test/: CMakeLists.txt  compression_sensor_mock_test.cc
sensor_drivers/sensor_fingerposition/src/: ads7138_registers.hpp  sensor_fingerposition.cpp  sensor_fingerposition.hpp
sensor_drivers/sensor_fingerposition/test/: CMakeLists.txt  fingerposition_sensor_mock_test.cc
sensor_drivers/sensor_position/src/: sensor_position.cpp  sensor_position.hpp
sensor_drivers/sensor_positioning/src/: sensor_positioning.cpp  sensor_positioning.hpp  sensor_positioning_helper.h
sensor_drivers/sensor_positioning/src/BMI270/: bmi270_registers.hpp  bmi2_defs.h
sensor_drivers/sensor_positioning/src/BMI270/common/: common.h
sensor_drivers/sensor_positioning/src_old/: sensor_positioning.cpp  sensor_positioning.hpp
sensor_drivers/sensor_positioning/src_old/BMI270/: bmi2.c
sensor_drivers/sensor_ventilation/src/: sdp810_registers.hpp  sensor_ventilation.cpp  sensor_ventilation.hpp
sensor_drivers/sensor_ventilation/test/: CMakeLists.txt  differentialpressure_sensor_mock_test.cc
usb_service_protocol/: usb_service_protocol.cpp  usb_service_protocol.hpp
