macro(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
        SET(dirlist ${dirlist} ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
endmacro()

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(subdir ${SUBDIRS})
IF(EXISTS ${CMAKE_CURRENT_LIST_DIR}/${subdir}/test)
 MESSAGE(STATUS "FOUND MODULE UNIT TEST:" ${subdir}/test)
 add_subdirectory(${subdir}/test)
ENDIF()
ENDFOREACH()